supporting email sender

--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
 		"vite": "^7.0.4"
 	},
 	"dependencies": {
+		"@sendgrid/client": "^8.1.5",
+		"@sendgrid/mail": "^8.1.5",
 		"agora-rtc-sdk-ng": "^4.24.0",
 		"chart.js": "^4.5.0",
 		"chartjs-adapter-date-fns": "^3.0.0",
 		"dotenv": "^17.2.1",
 		"exceljs": "^4.4.0",
+		"firebase-admin": "^13.4.0",
 		"jszip": "^3.10.1",
 		"liquidjs": "^10.21.1",
 		"pg": "^8.16.3",
@@ -34,6 +37,7 @@
 		"pusher-js": "^8.4.0",
 		"redis": "^5.6.1",
 		"stripe": "^18.4.0",
+		"twilio": "^5.8.0",
 		"uuid": "^11.1.0"
 	}
 }
