--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"@sendgrid/client": "^8.1.5",
 		"@sendgrid/mail": "^8.1.5",
 		"agora-rtc-sdk-ng": "^4.24.0",
+		"agora-token": "^2.0.5",
 		"chart.js": "^4.5.0",
 		"chartjs-adapter-date-fns": "^3.0.0",
 		"dotenv": "^17.2.1",
